Update my Profile

--- a/index.html
+++ b/index.html
@@ -311,18 +311,103 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
-        /*body > main > #FourthContent > div{
+        body > main > #FourthContent > div{
             height: 100px;
+            width: 100px;
             margin: auto;
             top:166px;
-            left: 1034px;
+            left: 297px;
             right: 0;
             position: relative;
         }
         body > main > #FourthContent > div > img{
             height: 543px;
             opacity: 30%;
-        }*/
+        }
+        body > main > #FourthContent > #FourthContentDivOne{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-101px;
+            left: -676px;
+            position: relative;
+        }
+        body > main > #FourthContent > #FourthContentDivOne > img {
+            height: 303px;
+            opacity: unset;
+        }
+        body > main > #FourthContent > #FourthContentDivTwo{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-212px;
+            left: -336px;
+            position: relative;
+        }
+        body > main > #FourthContent > #FourthContentDivTwo > img {
+            height: 321px;
+            opacity: unset;
+        }
+        body > main > #FourthContent > #FourthContentDivThree{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-313px;
+            left: 13px;
+            position: relative;
+        }
+        body > main > #FourthContent > #FourthContentDivThree > img{
+            height: 333px;
+            opacity: unset;
+        }
+        body > main > #FourthContent > #FourthContentDivFour{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-423px;
+            left: 411px;
+            position: relative;
+        }
+        body > main > #FourthContent > #FourthContentDivFour > img{
+            height: 367px;
+            opacity: unset;
+        }
+        body > main > #FourthContent > #FourthContentDivFive{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-159px;
+            left:-681px;
+            position: relative;
+        }
+        body > main > #FourthContent > #FourthContentDivFive > img{
+            height: 367px;
+            opacity: unset;
+        }
+        body > main > #FourthContent > #FourthContentDivSix{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-206px;
+            left:-339px;
+            position: relative;
+        }
+        body > main > #FourthContent > #FourthContentDivSix > img{
+            height: 339px;
+            opacity: unset;
+        }
+        body > main > #FourthContent > #FourthContentDivSeven{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-335px;
+            left:426px;
+            position: relative;
+        }
+        body > main >#FourthContent > #FourthContentDivSeven > img{
+            height: 380px;
+            opacity: unset;
+        }
         /*End Fourth Content*/
 
         /*Strat Fifth Content*/
@@ -378,13 +463,14 @@
         body > main > #FifthContent > #FifthContentDivO > h3{
             font-size: 38px;
             color: #16a085;
+            font-family: "Cooper Black";
         }
         body > main > #FifthContent > #FifthContentDivTwo{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-128px;
-            left: -457px;
+            top:36px;
+            left: 428px;
             position: relative;
         }
         body > main > #FifthContent > #FifthContentDivTwo > img{
@@ -396,20 +482,21 @@
             height: 80px;
             width: 498px;
             margin: auto;
-            top: -112px;
-            left: 56px;
+            top: 204px;
+            left: 535px;
             position: relative;
         }
         body > main > #FifthContent > #FifthContentT > h3{
             font-size: 38px;
             color: #16a085;
+            font-family: "Cooper Black";
         }
         body > main > #FifthContent > #FifthContentDivThree{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-373px;
-            left: 272px;
+            top:-451px;
+            left: -117px;
             position: relative;
         }
         body > main > #FifthContent > #FifthContentDivThree > img{
@@ -421,16 +508,15 @@
             height: 80px;
             width: 498px;
             margin: auto;
-            top: -174px;
-            left: 531px;
+            top: -245px;
+            left: 82px;
             position: relative;
         }
         body > main > #FifthContent > #FifthContentTh > h3{
             font-size: 38px;
             color: #16a085;
+            font-family: "Cooper Black";
         }
-
-
         /*End FifthContent*/
 
         /*Strat Sixth Content*/
@@ -448,18 +534,178 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
-        /*body > main > #SixthContent > div{
+        body > main > #SixthContent > div{
             height: 100px;
+            width:100px;
             margin: auto;
             top:165px;
-            left: 1034px;
+            left: 295px;
             right: 0;
             position: relative;
         }
         body > main > #SixthContent > div > img{
             height: 543px;
             opacity: 30%;
-        }*/
+        }
+        body > main > #SixthContent > #SixthContentDivOne{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-47px;
+            left: -660px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivOne > img{
+            height: 335px;
+            opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentDivTwo{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-145px;
+            left: -107px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivTwo > img{
+            height: 335px;
+            opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentDivThree{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-227px;
+            left: 442px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivThree > img{
+            height: 335px;
+            opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentTextBorderOne{
+            height: 100px;
+            width: 391px;
+            margin: auto;
+            top: -11px;
+            left: -541px;
+            right: 0;
+            background-color: #1B9CFC;
+            background-size: cover;
+            border-radius: 10px;
+            position: relative;
+            opacity: 80%;
+        }
+        body > main > #SixthContent > #SixthContentTextBorderOne > p{
+            font-size: 29px;
+            font-family:  "Cooper Black";
+        }
+        body > main > #SixthContent > #SixthContentTextBorderTwo{
+            height: 100px;
+            width: 391px;
+            margin: auto;
+            top: -141px;
+            left: 29px;
+            right: 0;
+            background-color: #1B9CFC;
+            background-size: cover;
+            border-radius: 10px;
+            position: relative;
+            opacity: 80%;
+        }
+        body > main > #SixthContent > #SixthContentTextBorderTwo > p{
+            font-size: 29px;
+            font-family:  "Cooper Black";
+        }
+        body > main > #SixthContent > #SixthContentTextBorderThree{
+            height: 100px;
+            width: 391px;
+            margin: auto;
+            top: -268px;
+            left: 571px;
+            right: 0;
+            background-color: #1B9CFC;
+            background-size: cover;
+            border-radius: 10px;
+            position: relative;
+            opacity: 80%;
+        }
+        body > main > #SixthContent > #SixthContentTextBorderThree > p {
+            font-size: 29px;
+            font-family:  "Cooper Black";
+            color: black;
+        }
+        body > main > #SixthContent > #SixthContentShortDivOne{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-212px;
+            left: -692px;
+            position: relative;
+
+        }
+        body > main > #SixthContent > #SixthContentShortDivOne > img{
+            height: 111px;
+            opacity: unset;
+            border-radius: 10%;
+        }
+        body > main > #SixthContent > #SixthContentShortDivTwo{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-298px;
+            left: -464px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentShortDivTwo > img{
+            height: 87px;
+            opacity: unset;
+            border-radius: 10%;
+        }
+        body > main > #SixthContent > #SixthContentShortDivThree {
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-399px;
+            left: -195px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentShortDivThree > img {
+            height: 87px;
+            opacity: unset;
+            border-radius: 10%;
+        }
+        body > main > #SixthContent > #SixthContentShortDivFour{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-500px;
+            left: -84px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentShortDivFour > img{
+            height: 87px;
+            opacity: unset;
+            border-radius: 10%;
+        }
+        body > main > #SixthContent > #SixthContentDiveFive{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-615px;
+            left:562px;
+            position: relative;
+
+        }
+        body > main > #SixthContent > #SixthContentDiveFive > button{
+           height: 73px;
+           width: 247px;
+           background-color: #16a085;
+           border-radius: 5%;
+           font-family: "Cooper Black";
+
+        }
+
         /*End Sixth Content*/
 
         /*Start Seventh Content*/
@@ -477,19 +723,73 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
-        /*body > main > #SeventhContent > div{
+        body > main > #SeventhContent > div{
             height: 100px;
+            width: 100px;
             margin: auto;
             top:245px;
-            left: 1034px;
+            left:296px;
             right: 0;
             position: relative;
         }
         body > main > #SeventhContent > div > img{
             height: 543px;
             opacity: 30%;
+        }
+        /*body > main > #SeventhContent > #SeventhContentfrom{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:245px;
+            left:296px;
+            right: 0;
+            position: relative;
+            background-size: cover;
         }*/
+
         /*End Seventh Content*/
+        body > main > footer{
+            height: 28vh;
+            background-image: url("assets/images/Background Image.PNG");
+        }
+
+        body > main > footer > #FooterContentDivOne{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:12px;
+            left: -712px;
+            position: relative;
+        }
+        body > main > footer >  #FooterContentDivOne > img{
+            height: 200px;
+
+        }
+        body > main > footer >#FooterContentDivTwo{
+            height: 80px;
+            width: 498px;
+            margin: auto;
+            top: -19px;
+            left: -22px;
+            position: relative;
+
+        }
+        body > main > footer > #FooterContentDivTwo > h3{
+            font-size: 22px;
+            color: #16a085;
+        }
+        body > main > footer > #FooterContentDivThree{
+            height: 80px;
+            width: 498px;
+            margin: auto;
+            top: -89px;
+            left: 14px;
+            position: relative;
+        }
+        body > main > footer > #FooterContentDivThree > h3{
+            font-size: 22px;
+            color: #16a085;
+        }
 
     </style>
 </head>
@@ -584,9 +884,30 @@
                <header>
                     <h1>MY SKILLS</h1>
                </header>
-          <!--<div>
+          <div>
               <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
-          </div>-->
+          </div>
+              <div id="FourthContentDivOne">
+                  <img src="assets/images/Filmora.png" alt="Error Loading Image">
+              </div>
+              <div id="FourthContentDivTwo">
+                  <img src="assets/images/Illustrator.png" alt="Error Loading Image">
+              </div>
+              <div id="FourthContentDivThree">
+                  <img src="assets/images/photoshop.png" alt="Error Loading Image">
+              </div>
+              <div id="FourthContentDivFour">
+                  <img src="assets/images/interlijdee.png" alt="Error Loading Image"> 
+              </div>
+              <div id="FourthContentDivFive">
+                  <img src="assets/images/VisualStdio.png" alt="Error Loading Image">
+              </div>
+              <div id="FourthContentDivSix">
+                  <img src="assets/images/phpmyadmin.png" alt="Error Loading Image">
+              </div>
+              <div id="FourthContentDivSeven">
+                  <img src="assets/images/mysql.png" alt="Error Loading Image">
+              </div>
           </section>
           <!--End Fourth Content -->
 
@@ -631,9 +952,48 @@
                <header>
                    <h1>MY PROJECTS</h1>
                </header>
-              <!--<div>
+              <div>
                   <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
-              </div>-->
+              </div>
+
+              <div id="SixthContentDivOne">
+                  <img src="assets/images/application.png" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentDivTwo">
+                  <img src="assets/images/mobile-app.png" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentDivThree">
+                  <img src="assets/images/application-settings.png" alt="Error Loading Image">
+              </div>
+
+              <div id="SixthContentTextBorderOne">
+                     <p>We are create a Full Stack Web Application & Desktop Applications.</p>
+              </div>
+
+              <div id="SixthContentTextBorderTwo">
+                  <p>We are create a Mobile Applications for Any Frameworks.</p>
+              </div>
+
+              <div id="SixthContentTextBorderThree">
+                  <p>We are create a Any IOT Web Application for Machine Language.</p>
+              </div>
+              <div id="SixthContentShortDivOne">
+                  <img src="assets/images/java-logo.png" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentShortDivTwo">
+                  <img src="assets/images/python-logo.png" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentShortDivThree">
+                  <img src="assets/images/c%23%20-%20Programming.png" alt="Error Loading Image">
+              </div>
+              
+              <div id="SixthContentShortDivFour">
+                  <img src="assets/images/NETA.png" alt="Error Loading Image">
+              </div>
+
+              <div id="SixthContentDiveFive">
+                  <button>GIT HUB ACCOUNT</button>
+              </div>
           </section>
           <!--End Sixth Content -->
 
@@ -642,15 +1002,31 @@
                <header>
                     <h1>CONTACT </h1>
                </header>
-            <!-- <div>
+             <div>
                  <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
-             </div> -->
+             </div>
+             <!--<form id="SeventhContentfrom">
+
+                 <label><b>User Name :</b></label>
+                 <input type="text" placeholder="Enter User Name" name="name">
+             </form> -->
          </section>
          <!--End Seventh Content -->
 
          <!--Start Final Content of footer -->
-         <footer id="FinelContent"></footer>
-         <!--Start Final Content of footer -->
+         <footer id="FinelContent">
+
+                 <div id="FooterContentDivOne">
+                     <img src="assets/images/logo.png" alt="Error Loading Image">
+                 </div>
+                 <div id="FooterContentDivTwo">
+                     <h3>SOFTWARE BY MY WEB IT SOLUTIONS...!</h3>
+                 </div>
+                 <div id="FooterContentDivThree">
+                     <h3>Powered By www.000WebHost.com..!</h3>
+                 </div>
+         </footer>
+         <!--End Final Content of footer -->
      </main>
    </body>
 </html>
