--- a/index.html
+++ b/index.html
@@ -551,36 +551,36 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-47px;
+            top:-84px;
             left: -660px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentDivOne > img{
-            height: 335px;
+            height: 178px;
             opacity: unset;
         }
         body > main > #SixthContent > #SixthContentDivTwo{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-145px;
-            left: -107px;
+            top:-183px;
+            left: -251px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentDivTwo > img{
-            height: 335px;
+            height: 178px;
             opacity: unset;
         }
         body > main > #SixthContent > #SixthContentDivThree{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-227px;
-            left: 442px;
+            top:-283px;
+            left: 153px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentDivThree > img{
-            height: 335px;
+            height: 178px;
             opacity: unset;
         }
         body > main > #SixthContent > #SixthContentTextBorderOne{
@@ -957,13 +957,13 @@
               </div>
 
               <div id="SixthContentDivOne">
-                  <img src="assets/images/application.png" alt="Error Loading Image">
+                  <img src="assets/images/case1.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentDivTwo">
-                  <img src="assets/images/mobile-app.png" alt="Error Loading Image">
+                  <img src="assets/images/case2.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentDivThree">
-                  <img src="assets/images/application-settings.png" alt="Error Loading Image">
+                  <img src="assets/images/case3.PNG" alt="Error Loading Image">
               </div>
 
               <div id="SixthContentTextBorderOne">
@@ -1005,11 +1005,7 @@
              <div>
                  <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
              </div>
-             <!--<form id="SeventhContentfrom">
 
-                 <label><b>User Name :</b></label>
-                 <input type="text" placeholder="Enter User Name" name="name">
-             </form> -->
          </section>
          <!--End Seventh Content -->
 
