--- a/BootStrap Pos System/mainform.html
+++ b/BootStrap Pos System/mainform.html
@@ -3,8 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>Super City Item Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
+   <main>
+       <header>
+           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+               <div class="container-fluid">
+                   <a class="navbar-brand" href="#">
+                       <img src="assets/img/Dashboardlogo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                       SuperCity
+                   </a>
+                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                       <span class="navbar-toggler-icon"></span>
+                   </button>
+                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Home</a>
+                           </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Customer</a>
+                           </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Item</a>
+                           </li>
 
-</body>
+                           <li class="nav-item">
+                               <a class="nav-link ">Place Order</a>
+                           </li>
+                       </ul>
+                       <form class="d-flex">
+                           <button class="btn btn-outline-success me-2" type="button">Sign Up</button>
+                           <button class="btn btn-sm btn-outline-secondary" type="button">Logout</button>
+                       </form>
+                   </div>
+               </div>
+           </nav>
+       </header>
+
+       <section>
+           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+               <div class="carousel-indicators">
+                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+               </div>
+               <div class="carousel-inner">
+                   <div class="carousel-item active">
+                       <img src="assets/img/m2.jpg" class="d-block w-100" alt="Error Loading Image">
+                       <div class="carousel-caption d-none d-md-block">
+                           <h5 class="text-black">Always Fresh Food & Vegetables</h5>
+                           <p class="text-black">Super City Food & Vegetable Supermarket.</p>
+                       </div>
+                   </div>
+                   <div class="carousel-item">
+                       <img src="assets/img/m2.jpg" class="d-block w-100" alt="Error Loading Image">
+                       <div class="carousel-caption d-none d-md-block">
+                           <h5 class="text-black">Always Fresh Food & Vegetables</h5>
+                           <p class="text-black">Super City Food & Vegetable Supermarket.</p>
+                       </div>
+                   </div>
+                   <div class="carousel-item">
+                       <img src="assets/img/m2.jpg" class="d-block w-100" alt="Error Loading Image">
+                       <div class="carousel-caption d-none d-md-block">
+                           <h5 class="text-black">Always Fresh Food & Vegetables</h5>
+                           <p class="text-black">Super City Food & Vegetable Supermarket.</p>
+                       </div>
+                   </div>
+               </div>
+               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                   <span class="visually-hidden">Previous</span>
+               </button>
+               <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                   <span class="visually-hidden">Next</span>
+               </button>
+           </div>
+       </section>
+   </main>
+   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+ </body>
 </html>
