--- a/BootStrap Pos System/customerform.html
+++ b/BootStrap Pos System/customerform.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="btn-group">
-        <a href="#" class="btn btn-primary">Add New Customer</a>
+        <a href="addnewcustomerform.html" class="btn btn-primary">Add New Customer</a>
         <a href="#" class="btn btn-success">View All Customer</a>
     </div>
     <section>
