--- a/BootStrap Pos System/itemform.html
+++ b/BootStrap Pos System/itemform.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="btn-group">
-        <a href="#" class="btn btn-primary">Add New Item</a>
+        <a href="addnewitemform.html" class="btn btn-primary">Add New Item</a>
         <a href="#" class="btn btn-success">View All Items</a>
     </div>
 
