--- a/index.html
+++ b/index.html
@@ -552,11 +552,11 @@
             width: 100px;
             margin: auto;
             top:-84px;
-            left: -660px;
+            left: -704px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentDivOne > img{
-            height: 178px;
+            height: 159px;
             opacity: unset;
         }
         body > main > #SixthContent > #SixthContentDivTwo{
@@ -564,11 +564,11 @@
             width: 100px;
             margin: auto;
             top:-183px;
-            left: -251px;
+            left: -328px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentDivTwo > img{
-            height: 178px;
+            height: 159px;
             opacity: unset;
         }
         body > main > #SixthContent > #SixthContentDivThree{
@@ -576,76 +576,86 @@
             width: 100px;
             margin: auto;
             top:-283px;
-            left: 153px;
+            left: 35px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentDivThree > img{
-            height: 178px;
+            height: 159px;
             opacity: unset;
         }
-        body > main > #SixthContent > #SixthContentTextBorderOne{
+        body > main > #SixthContent > #SixthContentDivFour {
             height: 100px;
-            width: 391px;
+            width: 100px;
             margin: auto;
-            top: -11px;
-            left: -541px;
-            right: 0;
-            background-color: #1B9CFC;
-            background-size: cover;
-            border-radius: 10px;
+            top:-382px;
+            left: 436px;
             position: relative;
-            opacity: 80%;
         }
-        body > main > #SixthContent > #SixthContentTextBorderOne > p{
-            font-size: 29px;
-            font-family:  "Cooper Black";
+        body > main > #SixthContent > #SixthContentDivFour > img{
+            height: 159px;
+            opacity: unset;
         }
-        body > main > #SixthContent > #SixthContentTextBorderTwo{
+        body > main > #SixthContent > #SixthContentDivFive{
             height: 100px;
-            width: 391px;
+            width: 100px;
             margin: auto;
-            top: -141px;
-            left: 29px;
-            right: 0;
-            background-color: #1B9CFC;
-            background-size: cover;
-            border-radius: 10px;
+            top:-278px;
+            left: -704px;
             position: relative;
-            opacity: 80%;
         }
-        body > main > #SixthContent > #SixthContentTextBorderTwo > p{
-            font-size: 29px;
-            font-family:  "Cooper Black";
+        body > main > #SixthContent > #SixthContentDivFive > img{
+            height: 176px;
+            opacity: unset;
         }
-        body > main > #SixthContent > #SixthContentTextBorderThree{
+        body > main > #SixthContent > #SixthContentDivSix{
             height: 100px;
-            width: 391px;
+            width: 100px;
             margin: auto;
-            top: -268px;
-            left: 571px;
-            right: 0;
-            background-color: #1B9CFC;
-            background-size: cover;
-            border-radius: 10px;
+            top:-377px;
+            left: -262px;
             position: relative;
-            opacity: 80%;
         }
-        body > main > #SixthContent > #SixthContentTextBorderThree > p {
-            font-size: 29px;
-            font-family:  "Cooper Black";
-            color: black;
+        body > main > #SixthContent > #SixthContentDivSix > img{
+            height: 176px;
+            opacity: unset;
         }
+        body > main > #SixthContent > #SixthContentDivSeven{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-476px;
+            left: 187px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivSeven > img {
+            height: 176px;
+            opacity: unset;
+        }
+
+        body > main > #SixthContent > #SixthContentDivEight{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-372px;
+            left: -703px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivEight > img{
+            height: 176px;
+            opacity: unset;
+        }
+
         body > main > #SixthContent > #SixthContentShortDivOne{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-212px;
+            top:-269px;
             left: -692px;
             position: relative;
 
         }
         body > main > #SixthContent > #SixthContentShortDivOne > img{
-            height: 111px;
+            height: 65px;
             opacity: unset;
             border-radius: 10%;
         }
@@ -653,12 +663,12 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-298px;
-            left: -464px;
+            top:-369px;
+            left: -548px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentShortDivTwo > img{
-            height: 87px;
+            height: 65px;
             opacity: unset;
             border-radius: 10%;
         }
@@ -666,12 +676,12 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-399px;
-            left: -195px;
+            top:-469px;
+            left: -343px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentShortDivThree > img {
-            height: 87px;
+            height: 65px;
             opacity: unset;
             border-radius: 10%;
         }
@@ -679,12 +689,12 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-500px;
-            left: -84px;
+            top:-569px;
+            left: -257px;
             position: relative;
         }
         body > main > #SixthContent > #SixthContentShortDivFour > img{
-            height: 87px;
+            height: 65px;
             opacity: unset;
             border-radius: 10%;
         }
@@ -692,7 +702,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-615px;
+            top:-735px;
             left:562px;
             position: relative;
 
@@ -966,18 +976,24 @@
                   <img src="assets/images/case3.PNG" alt="Error Loading Image">
               </div>
 
-              <div id="SixthContentTextBorderOne">
-                     <p>We are create a Full Stack Web Application & Desktop Applications.</p>
+             <div id="SixthContentDivFour">
+                  <img src="assets/images/case4.PNG" alt="Error Loading Image">
               </div>
 
-              <div id="SixthContentTextBorderTwo">
-                  <p>We are create a Mobile Applications for Any Frameworks.</p>
+              <div id="SixthContentDivFive">
+                  <img src="assets/images/Transcetioncase1.PNG" alt="Error Loading Image">
+              </div>
+               <div id="SixthContentDivSix">
+                  <img src="assets/images/Transcetioncase2.PNG" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentDivSeven">
+                  <img src="assets/images/Animationcase1.PNG" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentDivEight">
+                  <img src="assets/images/animationcase3.PNG" alt="Error Loading Image">
               </div>
 
-              <div id="SixthContentTextBorderThree">
-                  <p>We are create a Any IOT Web Application for Machine Language.</p>
-              </div>
-              <div id="SixthContentShortDivOne">
+               <div id="SixthContentShortDivOne">
                   <img src="assets/images/java-logo.png" alt="Error Loading Image">
               </div>
               <div id="SixthContentShortDivTwo">
