--- a/index.html
+++ b/index.html
@@ -746,17 +746,78 @@
             height: 543px;
             opacity: 30%;
         }
-        /*body > main > #SeventhContent > #SeventhContentfrom{
+        body > main > #SeventhContent > #human{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:245px;
-            left:296px;
+            top:16px;
+            left:64px;
             right: 0;
             position: relative;
-            background-size: cover;
-        }*/
+        }
+        body > main > #SeventhContent > #human > img{
+            height: 644px;
+            opacity: unset;
+        }
+        body > main > #SeventhContent > #SeventhContentheaderone{
+            height: 80px;
+            width: 656px;
+            margin: auto;
+            top: -93px;
+            left: -298px;
+            position: relative;
+        }
+        body > main > #SeventhContent > #SeventhContentheaderone > h1{
+            font-size: 82px;
+            color: #f39c12;
+            font-family: DL-Ridhma;
+        }
+        body > main > #SeventhContent > #SeventhContentheadertwo{
+            height: 80px;
+            width: 656px;
+            margin: auto;
+            top: -93px;
+            left: -298px;
+            position: relative;
+        }
+        body > main > #SeventhContent > #SeventhContentheadertwo > h2{
+            font-size: 53px;
+            color: #2980b9;
+            font-family: "Colonna MT";
+        }
+        body > main > #SeventhContent > #SeventhContentheaderthree{
+            height: 80px;
+            width: 656px;
+            margin: auto;
+            top: -93px;
+            left: -298px;
+            position: relative;
+        }
+        body > main > #SeventhContent > #SeventhContentheaderthree > h3{
+            font-size: 53px;
+            color: #3867d6;
+            font-family: "Colonna MT";
+        }
 
+        body > main > #SeventhContent > #SeventhContentheaderfour {
+            height: 55px;
+            width: 441px;
+            margin: auto;
+            top: 33px;
+            left: -510px;
+            position: relative;
+            background-color: #3d3d3d;
+            border-radius: 360px;
+
+
+        }
+        body > main > #SeventhContent > #SeventhContentheaderfour > h3{
+            text-align: center;
+            font-size: 38px;
+            font-family: Candara;
+            color: #7158e2;
+
+        }
         /*End Seventh Content*/
         body > main > footer{
             height: 28vh;
@@ -1021,7 +1082,23 @@
              <div>
                  <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
              </div>
+           <div id="human">
+               <img src="assets/images/Contactlogo.png" alt="Error loading Image">
+           </div>
 
+             <div id="SeventhContentheaderone">
+                 <h1>Contact Me...!</h1>
+             </div>
+
+            <div id="SeventhContentheadertwo">
+                 <h2>I am Mishel Perera...!</h2>
+             </div>
+             <div id="SeventhContentheaderthree">
+                 <h3>Now you have the opportunity to create a very expensive software.</h3>
+             </div>
+             <div id="SeventhContentheaderfour">
+                 <h3>Hire Me :-  +94 76 652 5646</h3>
+             </div>
          </section>
          <!--End Seventh Content -->
 
