--- a/BootStrap Pos System/customerform.html
+++ b/BootStrap Pos System/customerform.html
@@ -48,23 +48,26 @@
     </nav>
 </header>
 
-<main>
-    <div>
+<section class="container-fluid mt-3">
+    <section class="row mt-3 justify-content-around">
+    <div class="col-12 col-md-4">
         <h1 class="text-secondary">Customer Form</h1>
-    </div>
-    <div class="col-xl-6">
+      <div class="mb-3">
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search Customer" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success" type="submit">Search Customer</button>
         </form>
+       </div>
     </div>
 
-    <div class="btn-group">
-        <a href="addnewcustomerform.html" class="btn btn-primary">Add New Customer</a>
-        <a href="#" class="btn btn-success">View All Customer</a>
-    </div>
-    <section>
-        <div>
+      <div class="col-12 col-md-5">
+          <button class="btn btn-danger">Add New Customer Details</button>
+          <button class="btn btn-success">View Customer Details</button>
+      </div>
+    </section>
+
+      <section class="row mt-4">
+          <div class="col">
             <table class="table table-bordered table-hover mt-3">
                 <thead class="bg-danger text-white">
                 <tr class="table-success">
@@ -97,10 +100,9 @@
                 </tbody>
             </table>
         </div>
+      </section>
 
-    </section>
-
-</main>
+</section>
 
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
