--- a/BootStrap Pos System/itemform.html
+++ b/BootStrap Pos System/itemform.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Super City Item Form</title>
+    <title>Super City Customer Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-
     <style>
         body > header > nav{
             box-shadow: -2px 6px 9px -4px #2c3e50;
@@ -13,6 +12,7 @@
     </style>
 </head>
 <body>
+
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -48,29 +48,31 @@
     </nav>
 </header>
 
-<main>
-    <div>
-        <h1 class="text-secondary">Item Form</h1>
-    </div>
-    <div class="col-xl-6">
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search item" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-    </div>
+<section class="container-fluid mt-3">
+    <section class="row mt-3 justify-content-around">
+        <div class="col-12 col-md-4">
+            <h1 class="text-secondary">View Item Form</h1>
+            <div class="mb-3">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search Customer" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search Items</button>
+                </form>
+            </div>
+        </div>
 
-    <div class="btn-group">
-        <a href="addnewitemform.html" class="btn btn-primary">Add New Item</a>
-        <a href="#" class="btn btn-success">View All Items</a>
-    </div>
+        <div class="col-12 col-md-5">
+            <button class="btn btn-danger">Add New Item Details</button>
+            <button class="btn btn-success">View Items </button>
+        </div>
+    </section>
 
-    <section>
-        <div>
+    <section class="row mt-4">
+        <div class="col">
             <table class="table table-bordered table-hover mt-3">
                 <thead class="bg-danger text-white">
                 <tr class="table-success">
                     <th scope="col">Id</th>
-                    <th scope="col">Item Type </th>
+                    <th scope="col">Item Type</th>
                     <th scope="col">In Stock</th>
                     <th scope="col">Salary</th>
                 </tr>
@@ -80,27 +82,28 @@
                     <th scope="row">1</th>
                     <td>Soap</td>
                     <td>25</td>
-                    <td>2,500</td>
+                    <td>25,000</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>Chocolate</td>
                     <td>23</td>
-                    <td>3,500</td>
+                    <td>35,000</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Milk</td>
                     <td>20</td>
-                    <td>2,000</td>
+                    <td>20,000</td>
 
                 </tr>
                 </tbody>
             </table>
         </div>
-
     </section>
-</main>
+
+</section>
+
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
