--- a/BootStrap Pos System/itemform.html
+++ b/BootStrap Pos System/itemform.html
@@ -58,6 +58,17 @@
                     <button class="btn btn-outline-success" type="submit">Search Items</button>
                 </form>
             </div>
+
+            <div class="mb-3">
+                <div class="card" style="width: 30rem;">
+                    <img src="assets/img/S2.jpg" class="card-img-top" alt="Error Loading Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Select Any Item</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="col-12 col-md-5">
