--- a/BootStrap Pos System/customerform.html
+++ b/BootStrap Pos System/customerform.html
@@ -58,6 +58,16 @@
             <button class="btn btn-outline-success" type="submit">Search Customer</button>
         </form>
        </div>
+        <div class="mb-3">
+            <div class="card" style="width: 30rem;">
+                <img src="assets/img/S1.jpg" class="card-img-top" alt="Error loading image">
+                <div class="card-body">
+                    <h5 class="card-title">Add Customer Details</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
     </div>
 
       <div class="col-12 col-md-5">
