--- a/BootStrap Pos System/itemform.html
+++ b/BootStrap Pos System/itemform.html
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="mainform.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Customer</a>
+                        <a class="nav-link" href="customerform.html">Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Item</a>
+                        <a class="nav-link" href="itemform.html">Item</a>
                     </li>
 
                     <li class="nav-item">
