--- a/BootStrap Pos System/mainform.html
+++ b/BootStrap Pos System/mainform.html
@@ -21,22 +21,22 @@
                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                            <li class="nav-item">
-                               <a class="nav-link" href="#">Home</a>
+                               <a class="nav-link" href="mainform.html">Home</a>
                            </li>
                            <li class="nav-item">
-                               <a class="nav-link" href="#">Customer</a>
+                               <a class="nav-link" href="customerform.html">Customer</a>
                            </li>
                            <li class="nav-item">
-                               <a class="nav-link" href="#">Item</a>
+                               <a class="nav-link" href="itemform.html">Item</a>
                            </li>
 
                            <li class="nav-item">
-                               <a class="nav-link ">Place Order</a>
+                               <a class="nav-link">Place Order</a>
                            </li>
                        </ul>
                        <form class="d-flex">
                            <button class="btn btn-outline-success me-2" type="button">Sign Up</button>
-                           <button class="btn btn-sm btn-outline-secondary" type="button">Logout</button>
+                           <button class="btn btn-sm btn-outline-secondary" type="button">Login</button>
                        </form>
                    </div>
                </div>
